infrastructure/gitops/kind/clusters/hub-01/bondy/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: bondy-cluster
  namespace: macula-system
  labels:
    app: bondy
spec:
  type: LoadBalancer
  selector:
    app: bondy
  ports:
  - name: cluster
    port: 18086
    targetPort: 18086
    protocol: TCP
